                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 28-10-2004 updated: Oct 24th compiled mplayer.dll
  - 28-10-2004 changed: removed .nfo from XboxMediaCenter.xml default <videoextensions> and added .rar|.001
  - 28-10-2004 updated: added .001 to be handled as rar in Util.cpp (used with ccxstream_unrar for streaming video from rar files)
  - 28-10-2004 updated: XLink-KAI Private / Clan arena (alpha) support.
  - 27-10-2004 updated: German language file
  - 27-10-2004 updated: Italian language file (Thnx to kotix)
  - 27-10-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 27-10-2004 fixed: Filemanager defaults to sort ascending by filename.
  - 27-10-2004 fixed: Thumb aspect ratios now default to the pixel ratio standards (rather than the video settings pixel ratio), making skinning more predictable.
  - 27-10-2004 added: In slideshow/pictures viewing, thumbnails are automatically generated as each picture is displayed.
  - 27-10-2004 fixed: filemanager didn't display computername in path
  - 27-10-2004 fixed: selecting Xecuter3 LCD would cause errors when running in debug mode
  - 27-10-2004 fixed: selecting Xenium LCD would show up as having selected Xecuter3 and the 
                      opposite when returning to setting screen.
  - 26-10-2004 fixed: Autoshutdown now checks for FTP activity (SF Bug #1051210)
  - 26-10-2004 added: Kai password is displayed using *'s in the GUI.
  - 26-10-2004 fixed: Hide File extension and Parent Dir Items clash in General Settings
  - 26-10-2004 added: SF patch [ 1048648 ] Fix MP3 Parser due to change in multi-genre handling - thanks kraqh3d!